--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 .env
 
-resources/**
+**.exe
 
-!.gitkeep
+resources/audio/*
+resources/encoded/*
+
+!resources/audio/.gitkeep
+!resources/encoded/.gitkeep
