--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           go-version: "1.22"
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v cmd/main.go
 
       - name: Test
-        run: go test -v ./...
+        run: go test -v cmd/main.go
